<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">List My Apps</string>
    <string name="deselect_all">Deselect all</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="edit_templates">Template Editor</string>
    <string name="annotations">Annotations</string>
    <string name="always_link">Always link to Google Play, even if the app does not come from there</string>
    <string name="lbl_format_as">Copy/Share as:</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_versioncode">Version code</string>
    <string name="lbl_installed">First installed</string>
    <string name="lbl_updated">Last updated</string>
    <string name="lbl_uid">User ID</string>
    <string name="lbl_datadir">Data directory</string>
    <string name="lbl_templates">Templates define how lists will be formated. You can create as many as you like, but you must have at least one.</string>
    <string name="lbl_template_editor">A template consists of the list item (to be filled with app info), as well as an optional header and footer. All parts will be concatenated \"as-is\", with the item being repeated once per app. Supply newlines as needed. Header, item and footer may contain variables.</string>
    <string name="lbl_template_name">Template Name:</string>
    <string name="apprater_title">Rate this app?</string>
    <string name="apprater_message">"Hi,
seems like you find this app useful. Would you consider rating it? This will only take a minute of your time, but encourages further development."</string>
    <string name="apprater_positive">Sure!</string>
    <string name="apprater_negative">No thanks</string>
    <string name="apprater_neutral">Later</string>
    <string name="title_activity_templates">Templates</string>
    <string name="title_activity_annotations">Annotations</string>
    <string name="title_activity_template_editor">Template Editor</string>
    <string name="title_send_to">Share with</string>
    <string name="title_really_delete">Really delete?</string>
    <string name="title_variable_to_insert">Variable to insert</string>
    <string name="hint_header">List header, may be blank</string>
    <string name="hint_item">Item format, may not be blank</string>
    <string name="hint_footer">List footer, may be blank</string>
    <string name="hint_my_notes">My notes</string>
    <string name="msg_error_no_templates">Yikes! How did you manage to delete all your templates?!</string>
    <string name="msg_error_incomplete">Name and item are required!</string>
    <string name="msg_warn_nothing_selected">Select the apps you want to list!</string>
    <string name="msg_too_large">Whoops! Your list was too large for sharing. Copied to clipboard instead.</string>
    <string name="msg_list_copied_to_clipboard">%1$d/%2$d items copied to clipboard</string>
    <string name="msg_name_does_not_support_variables">Name does not support variables</string>
    <string name="msg_this_cannot_be_undone">This cannot be undone</string>
    <string name="lbl_annotations_description">Annotations can be referenced in templates as ${comment} and may themselves contain other variables (${packagename}, ${displayname}, ${source}, ${uid}, ${version}, ${versioncode}, ${firstinstalled}, ${lastupdated}, ${datadir}, $targetsdk}, ${tags} and ${marketid}). Annotations are kept when their app is deinstalled in case it gets reinstalled later. Tags allow for grouping apps for faster selection.</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_my_tags">Tags (comma separated)</string>
    <string name="bytag">Select by tag</string>
    <string name="title_select_apps_by_tag">Select apps with tag</string>
    <string name="msg_no_apps_tagged">"No apps tagged! Apps can be tagged via the 'Annotations' screen."</string>
    <string name="msg_no_webbrowser">No webbrowser installed!</string>
    <string name="url_help">http://www.onyxbits.de/faq/list-my-apps</string>
    <string name="browse">browse</string>
    <string name="url_browse">http://www.onyxbits.de/listmyapps/browse?suggest=%1$s</string>
</resources>
