<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_copy" android:id="@id/copy" android:title="@android:string/copy" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_share" android:id="@id/share" android:title="@string/share" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_browse" android:id="@id/browse" android:title="@string/browse" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_select_all" android:id="@id/select_all" android:title="@android:string/selectAll" />
    <item android:id="@id/bytag" android:title="@string/bytag" />
    <item android:icon="@drawable/ic_action_deselect_all" android:id="@id/deselect_all" android:title="@string/deselect_all" />
    <item android:icon="@drawable/ic_action_annotations" android:id="@id/annotations" android:title="@string/annotations" />
    <item android:icon="@drawable/ic_action_templates" android:id="@id/edit_templates" android:title="@string/edit_templates" />
    <item android:icon="@drawable/ic_action_help" android:id="@id/item_help" android:title="@string/help" />
</menu>