<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="20.0dip" android:text="@string/lbl_template_editor" android:textIsSelectable="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_template_name" android:layout_alignLeft="@id/textView1" android:layout_alignTop="@id/tmpl_name" android:layout_alignBottom="@id/tmpl_name" />
        <EditText android:id="@id/tmpl_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="25.0dip" android:ems="10" android:singleLine="true" android:layout_toRightOf="@id/textView2" android:layout_below="@id/textView1" android:layout_alignRight="@id/textView1" android:inputType="text">
            <requestFocus />
        </EditText>
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout2" android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tmpl_name">
            <EditText android:id="@id/tmpl_header" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/hint_header" android:ems="10" android:inputType="textMultiLine" />
            <EditText android:id="@id/tmpl_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_item" android:ems="10" android:inputType="textMultiLine" />
            <EditText android:id="@id/tmpl_footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_footer" android:ems="10" android:inputType="textMultiLine" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>