<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="3.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbl_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lbl_version" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lbl_val_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="5.0dip" android:text="" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbl_versioncode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lbl_versioncode" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lbl_val_versioncode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="5.0dip" android:text="" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbl_installed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lbl_installed" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lbl_val_installed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="5.0dip" android:text="" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbl_updated" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lbl_updated" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lbl_val_updated" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="5.0dip" android:text="" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbl_uid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lbl_uid" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lbl_val_uid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="5.0dip" android:text="" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/lbl_datadir" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lbl_datadir" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lbl_val_datadir" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="5.0dip" android:text="" />
</LinearLayout>